--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "//corwatts.com"
+baseURL = "//camillewalters.github.io"
 
 # The name of this wonderful theme ;-).
 theme = 'hugo-bearblog'
